objects/Account_Plan__c.object
<CustomObject>
    <description>Account Plans - Clone of 62-Org Account Plans</description>
    <fields>
        <fullName>Account_Business_Plan_Link__c</fullName>
        <formula>$Label.SFDC_URL+Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Business Plan Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Summary_Score__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Account Summary Score</label>
        <precision>13</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Annual_Revenue__c</fullName>
        <label>Annual Sales(M)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Average_Score__c</fullName>
        <formula>(Account_Summary_Score__c +Business_Unit_Plans_Score__c+Competitive_Landscapes_Score__c+Customer_Biz_Priority_Score__c+Customer_Relationship_Maps_Score__c+HP_Strategic_Initiatives_Score_1__c+Total_Customer_Experience_Score__c+Partner_Landscape_Score__c)/8</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average Score</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Briefing_Integration_Description__c</fullName>
        <label>Briefing Integration Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Business_Unit_Plans_Score__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Business Unit Plans Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Competitive_Landscapes_Score__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Competitive Landscapes Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>HQ Country</label>
        <picklist>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anguilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antarctica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua and Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia and Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bouvet Island</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brunei Darussalam</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Current_State_of_Business__c</fullName>
        <label>State of HP Business with Customer</label>
        <length>3000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Customer_Biz_Priority_Score__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Customer Business Priorities Score</label>
        <precision>5</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Industry__c</fullName>
        <label>Customer Industry</label>
        <picklist>
            <picklistValues>
                <fullName>Accounting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aerospace</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agriculture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agriculture/forestry/fishing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amusement and Recreation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apparel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automotive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Biotechnology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Consultancy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemicals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computer Software/Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Construction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consulting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer Packaged Goods</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Defense/Security/Police</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Defense Manufactures</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discrete - Energy &amp; Nat. Res.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discrete - High Tech</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discrete - Machinery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discrete - Media &amp; Ent.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discrete - Retail &amp; CG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education: Higher Ed/Universities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education: K-12 /School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Relationship_Maps_Score__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Customer Relationship Maps Score</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Strategy_Priorities__c</fullName>
        <label>Customer Strategic Overview</label>
        <length>3000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Customer_definition_agreed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customer definition agreed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_of_Last_Cust_Innovation_Engagement__c</fullName>
        <label>Last Customer Innovation Engagement</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Next_Cust_Innovation_Engagement__c</fullName>
        <label>Next Customer Innovation Engagement</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Executive_Asks__c</fullName>
        <label>Executive Asks</label>
        <length>3000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Executive_Sponsor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Executive Sponsor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Plans1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FY11_Revenue_Total__c</fullName>
        <label>FY11 Revenue Total ($)</label>
        <summarizedField>Business_Unit_Plan__c.FY11_Revenue_actuals__c</summarizedField>
        <summaryForeignKey>Business_Unit_Plan__c.Account_Plan__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>FY12_Revenue_Total__c</fullName>
        <label>FY12 Revenue Total ($)</label>
        <summarizedField>Business_Unit_Plan__c.FY12_Revenue_YTD__c</summarizedField>
        <summaryForeignKey>Business_Unit_Plan__c.Account_Plan__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>FY13_Revenue_Total__c</fullName>
        <label>FY13 Revenue Total ($)</label>
        <summarizedField>Business_Unit_Plan__c.FY13_Projected_Revenue__c</summarizedField>
        <summaryForeignKey>Business_Unit_Plan__c.Account_Plan__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Fiscal_Year_End__c</fullName>
        <label>Fiscal Year End</label>
        <picklist>
            <picklistValues>
                <fullName>January</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>February</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>March</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>April</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>May</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>June</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>July</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>August</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>September</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>October</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>November</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>December</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Fy12Sum__c</fullName>
        <label>Fy12Sum</label>
        <summarizedField>Business_Unit_Plan__c.FY12_Revenue_YTD__c</summarizedField>
        <summaryFilterItems>
            <field>Business_Unit_Plan__c.BU_Name__c</field>
            <operation>notEqual</operation>
            <value>HPFS</value>
        </summaryFilterItems>
        <summaryForeignKey>Business_Unit_Plan__c.Account_Plan__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Fy13Sum__c</fullName>
        <label>Fy13Sum</label>
        <summarizedField>Business_Unit_Plan__c.FY13_Projected_Revenue__c</summarizedField>
        <summaryFilterItems>
            <field>Business_Unit_Plan__c.BU_Name__c</field>
            <operation>notEqual</operation>
            <value>HPFS</value>
        </summaryFilterItems>
        <summaryForeignKey>Business_Unit_Plan__c.Account_Plan__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Fy14Sum__c</fullName>
        <label>Fy14Sum</label>
        <summarizedField>Business_Unit_Plan__c.FY14_Projected_Revenue__c</summarizedField>
        <summaryFilterItems>
            <field>Business_Unit_Plan__c.BU_Name__c</field>
            <operation>notEqual</operation>
            <value>HPFS</value>
        </summaryFilterItems>
        <summaryForeignKey>Business_Unit_Plan__c.Account_Plan__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Governance__c</fullName>
        <label>Governance</label>
        <picklist>
            <picklistValues>
                <fullName>Account Executive Led</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AGM Led</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AM Led</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BU Specialist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Generalist</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HP_Go_To_Market_Segmentation__c</fullName>
        <label>HP Go-To-Market Segmentation</label>
        <picklist>
            <picklistValues>
                <fullName>Alliance Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Channels</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial and Public Sector</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate US SLED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enterprise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enterprise Alliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Accounts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Named Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Small, Medium Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SMB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SMB US SLED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Top Account</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HP_Innovation_aim_with_customer__c</fullName>
        <inlineHelpText>Document how you will use &apos;Innovation&apos; specifically to enhance your customer&apos;s business and HP&apos;s relationship with them.  Share key business themes of potential and aim to list as much detail as possible as to the outcomes the account would like to see.</inlineHelpText>
        <label>HP Innovation Strategy for Customer</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HP_Strategic_Initiatives_Score_1__c</fullName>
        <defaultValue>0</defaultValue>
        <label>HP Strategic Initiatives Score</label>
        <precision>5</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HP_Strategy_and_Opportunities__c</fullName>
        <label>HP Strategy &amp; Opportunities</label>
        <length>3000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>HP_and_Customer_Governance__c</fullName>
        <inlineHelpText>Summarise here any regular Innovation-specific governance structure with key client influencers, formal or otherwise. Include client contacts that are influential within target areas for innovation delivery, upcoming deals/renewals and/or client surveys.</inlineHelpText>
        <label>HP and Customer Governance</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HQ_Region__c</fullName>
        <label>HQ Region</label>
        <picklist>
            <picklistValues>
                <fullName>AMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HQ_Sub_Region__c</fullName>
        <label>HQ Sub Region</label>
        <picklist>
            <controllingField>HQ_Region__c</controllingField>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MCA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mexico</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>United States</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Korea</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South Pacific</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South East Asia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CEE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>France</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Germany</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GWE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Italy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MEMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Latin America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia Pacific</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VN</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>How_our_customers_defines_Innovation__c</fullName>
        <label>How our customer defines Innovation</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Inactive_Plan__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Sales Management has decided that this is not an active account plan.</inlineHelpText>
        <label>Inactive Plan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Industry_Segment__c</fullName>
        <label>Industry Segment</label>
        <picklist>
            <picklistValues>
                <fullName>CME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EDI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FSI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HLS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MFG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FIN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Innovation_Agenda_Brief_Description__c</fullName>
        <defaultValue>&quot;The following link will give further advice and guidance on your Account Innovation Agenda.&quot; +BR()+
&quot;http://intranet.hp.com/tsg/ww3/EnterpriseInnovation/Pages/InnovationAgenda.aspx&quot; +BR()+
&quot;&quot;</defaultValue>
        <inlineHelpText>Attach your Innovation Agenda as an attachment to your Account Plan, see link for templates, training, contacts and more.</inlineHelpText>
        <label>Further Innovation Agenda Guidance</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Innovation_Engagement_Referenceable__c</fullName>
        <inlineHelpText>Please share if your client is – or isn’t – agreeable to be used as a reference within HP.</inlineHelpText>
        <label>Innovation Engagement Referenceable</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Integration_status_customerReport__c</fullName>
        <label>Customer PPT Integration Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Integration_status_execSummaryReport__c</fullName>
        <label>Summary PPT Integration Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Key_Challenges__c</fullName>
        <label>Key Challenges</label>
        <length>3000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Legal_Name__c</fullName>
        <label>Legal Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <formula>$Label.ABP_Note</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Note:</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Employees__c</fullName>
        <label>Number of Employees</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_change_email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Owner change email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Partner_Landscape_Score__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Partner Landscape Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Plan_Status__c</fullName>
        <label>Plan Status</label>
        <picklist>
            <picklistValues>
                <fullName>In Progress</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted – Pending Review</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary_AccountAccount__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Plans</relationshipLabel>
        <relationshipName>Account_Plans</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Private_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Private Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TCE_Priorities__c</fullName>
        <label>TCE Priorities</label>
        <length>3000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Total_Customer_Experience_Score__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Customer Experience Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Score_Maximum_Score_is_30__c</fullName>
        <formula>Account_Summary_Score__c +HP_Strategic_Initiatives_Score_1__c+Business_Unit_Plans_Score__c+Competitive_Landscapes_Score__c+Customer_Biz_Priority_Score__c+Customer_Relationship_Maps_Score__c+Total_Customer_Experience_Score__c+Partner_Landscape_Score__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Maximum Score is 40</inlineHelpText>
        <label>Total Score</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Score_Update__c</fullName>
        <inlineHelpText>The Maximum Score is 30</inlineHelpText>
        <label>Total Score</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Score__c</fullName>
        <formula>(Account_Summary_Score__c +Business_Unit_Plans_Score__c+Competitive_Landscapes_Score__c+Customer_Biz_Priority_Score__c+Customer_Relationship_Maps_Score__c+HP_Strategic_Initiatives_Score_1__c+Partner_Landscape_Score__c+Total_Customer_Experience_Score__c)/40</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Score (%)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>URL1__c</fullName>
        <label>URL1</label>
        <length>256</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>URL2__c</fullName>
        <label>URL2</label>
        <length>256</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>URL3__c</fullName>
        <label>URL3</label>
        <length>256</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sow_percent__c</fullName>
        <label>sow_percent</label>
        <summarizedField>Business_Unit_Plan__c.Current_SOW__c</summarizedField>
        <summaryFilterItems>
            <field>Business_Unit_Plan__c.BU_Name__c</field>
            <operation>notEqual</operation>
            <value>HPFS</value>
        </summaryFilterItems>
        <summaryForeignKey>Business_Unit_Plan__c.Account_Plan__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Account Plan</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>My_AccountPlans</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <label>My Account Plans</label>
    </listViews>
    <nameField>
        <label>Account Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Plans</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Check_Cutomer_Innovation_Dates</fullName>
        <active>true</active>
        <description>Next Date should be greater than the Last Date.</description>
        <errorConditionFormula>Date_of_Next_Cust_Innovation_Engagement__c   &lt;= Date_of_Last_Cust_Innovation_Engagement__c</errorConditionFormula>
        <errorDisplayField>Date_of_Next_Cust_Innovation_Engagement__c</errorDisplayField>
        <errorMessage>Date cannot be prior or equal to Last Customer Innovation.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Last_Date_cannot_be_after_today</fullName>
        <active>true</active>
        <errorConditionFormula>Date_of_Last_Cust_Innovation_Engagement__c  &gt; today()</errorConditionFormula>
        <errorDisplayField>Date_of_Last_Cust_Innovation_Engagement__c</errorDisplayField>
        <errorMessage>Date cannot be after today.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Next_Date_cannot_be_less_than_today</fullName>
        <active>false</active>
        <errorConditionFormula>Date_of_Next_Cust_Innovation_Engagement__c &lt; today()</errorConditionFormula>
        <errorDisplayField>Date_of_Next_Cust_Innovation_Engagement__c</errorDisplayField>
        <errorMessage>Date cannot be before today.</errorMessage>
    </validationRules>
</CustomObject>